# Raytracer

./: .gitignore  CMakeLists.txt  README.md  image.cpp  image.h  imageWriter.h  main.cpp  main.h  material.cpp  material.h  mesh.cpp  mesh.h  raytracing.cpp  raytracing.h  texture.cpp  texture.h  traqueboule.h
Meshes/Textures/: moon.ppm
Meshes/cornellBox/: cornellBoxMirrorTriangulated.mtl  cornellBoxTriangulatedobj.mtl
Shapes/: mymesh.cpp  plane.cpp  shape.cpp  shape.h  shapes.h  sphere.cpp  triangleshape.cpp
